# openapi.json
@@ -2042,6 +2042,12 @@
                     },
                     "spriteUrl": {
                         "type": "string"
+                    },
+                    "types": {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
                     }
                 }
             },
